# radioxide

./: .gitignore  README.md
back/: Cargo.toml
back/configs/: relay_configs.txt
back/src/: lib.rs  main.rs  routing.rs  streaming.rs  utils.rs
front/: Cargo.toml  Dioxus.toml
front/src/: components.rs  lib.rs  listening.rs  main.rs  status.rs  streaming.rs
streamer/: Cargo.toml
streamer/configs/: streamer_configs.txt
streamer/src/: gui.rs  gui_components.rs  gui_utils.rs  lib.rs  main.rs  playing.rs  recording.rs  streaming.rs  utils.rs
