[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
brotli = "5.0.0"
cpal = { version = "0.15.3", features = ["wasm-bindgen"] }
dioxus = { version = "0.5.0", features = ["web"] }
futures-core = "0.3.30"
futures-util = { version = "0.3.30", features = ["futures-sink", "sink"] }
log = "0.4.21"
reqwest = { version = "0.12.2", features = ["json"] }
ringbuf = "0.3.3"
serde = { version = "1.0.197", features = ["derive"] }
tokio-tungstenite-wasm = "0.3.1"
tokio_with_wasm = "0.4.3"
wasm-logger = "0.2.0"
